<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_height="fill_parent" >

                <Button
                    android:id="@+id/courbe_voir_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voir_lib"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/courbe_ajouter_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ajouter_lib"
                    android:textSize="14sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/courbe_animal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" >

            <LinearLayout
                android:id="@+id/courbe_animal_linear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_add_animal"
                    android:layout_weight="1"
                    android:text="@string/selectAnimal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size_add_animal" />

                <Spinner
                    android:id="@+id/spinnerSelectAnimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/courbe_graphique"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/courbe_graphique_linear"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>
            
            
        </TableRow>

        <TableRow
            android:id="@+id/courbe_date"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_add_animal"
                    android:layout_weight="1"
                    android:text="@string/date_mesure_poids_lib"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size_add_animal" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10"
                    android:textSize="@dimen/text_size_add_animal" >
                </EditText>

                <ImageButton
                    android:id="@+id/imageButtonCalencar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/calendar" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/courbe_saisie"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_add_animal"
                    android:layout_weight="1"
                    android:text="@string/poids_lib"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size_add_animal" />

                <EditText
                    android:id="@+id/editTextPoids"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="@dimen/text_size_add_animal" >
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/courbe_comment"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_add_animal"
                    android:layout_weight="1"
                    android:text="@string/comment"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size_add_animal" />

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="@dimen/text_size_add_animal" >
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/courbe_btn"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                >

                <Button
                    android:id="@+id/phantomBouton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_lib"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/courbe_btn_valider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_poids"
                    android:textSize="14sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>